Fix: atualização de z-index de botões tela artigo. adequacao da troca de logo no nav.html

--- a/versions/1.0.0/src/common/scss/_components/_accessibility-bar.scss
+++ b/versions/1.0.0/src/common/scss/_components/_accessibility-bar.scss
@@ -757,6 +757,7 @@ body{
     right: 0.625rem !important;
     margin: 0 !important;
     overflow: visible;
+    z-index: 1050;
   }
 
   .btn.setAccessibility{
